@@ -15,17 +15,30 @@ public class DistinctAndSets {
     @Test
     public void distinct() throws Exception {
         List<Integer> numbers = List.of(1, 1, 2, 2, 3, 3, 4, 4, 5, 5, 6, 6, 7, 7, 8, 8, 9, 9, 9, 9, 9);
-        List<Integer> collect = numbers.stream().distinct().toList();
-        System.out.println(collect);
+        List<Integer> collect = numbers.stream().distinct().collect(Collectors.toList());
+
         assertThat(collect).hasSize(9);
+        System.out.println(collect);
+
+//        List<Integer> collect = numbers.stream().distinct().toList();
+//        System.out.println(collect);
+//        assertThat(collect).hasSize(9);
 
     }
 
     @Test
     public void distinctWithSet() throws Exception {
         List<Integer> numbers = List.of(1, 1, 2, 2, 3, 3, 4, 4, 5, 5, 6, 6, 7, 7, 8, 8, 9, 9, 9, 9, 9);
-        Set<Integer> collect = new HashSet<>(numbers);
-        System.out.println(assertThat(collect).hasSize(9));
+
+        Set<Integer> collect = numbers.stream().collect(Collectors.toSet());
+        // Set<Integer> collect = new HashSet<>(numbers);
+
+        assertThat(collect).hasSize(9);
+
+        System.out.println(collect);
+
+//        Set<Integer> collect = new HashSet<>(numbers);
+//        System.out.println(assertThat(collect).hasSize(9));
 
     }
 }
