@@ -17,13 +17,20 @@ public class Filtering {
     @Test
     public void filter() throws Exception {
         List<Car> cars = MockData.getCars();
-        Predicate<Car> carPredicate = car -> car.getPrice() < 20_000;
-        Predicate<Car> colorPredicate = car -> car.getColor().equals("Yellow");
+
+        Predicate<Car> carPredicate = car -> car.getPrice() < 20000;
         List<Car> collect = cars.stream()
-                .filter(carPredicate)
-                .filter(colorPredicate)
-                .toList();
+                .filter(carPredicate).collect(Collectors.toList());
         collect.forEach(System.out::println);
+
+
+//        Predicate<Car> carPredicate = car -> car.getPrice() < 20_000;
+//        Predicate<Car> colorPredicate = car -> car.getColor().equals("Yellow");
+//        List<Car> collect = cars.stream()
+//                .filter(carPredicate)
+//                .filter(colorPredicate)
+//                .toList();
+//        collect.forEach(System.out::println);
     }
 
     @Test
@@ -38,35 +45,50 @@ public class Filtering {
 
     @Test
     public void takeWhile() throws Exception {
-        // using filter
-        System.out.println("using filter");
-        Stream.of(2, 4, 6, 8, 9, 10, 12).filter(n -> n % 2 == 0)
-                .forEach(n -> System.out.print(n + " "));
 
-        System.out.println();
-        System.out.println("using take while");
-        Stream.of(2,4,6,8,9,10,12).takeWhile(n->n%2==0).forEach(n-> System.out.print(n+" "));
+
+        // using filter
+//        System.out.println("using filter");
+//        Stream.of(2, 4, 6, 8, 9, 10, 12).filter(n -> n % 2 == 0)
+//                .forEach(n -> System.out.print(n + " "));
+//
+//        System.out.println();
+//        System.out.println("using take while");
+//        Stream.of(2,4,6,8,9,10,12).takeWhile(n->n%2==0).forEach(n-> System.out.print(n+" "));
     }
 
     @Test
     public void findFirst() throws Exception {
         int[] numbers = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10};
-        int i = Arrays.stream(numbers).filter(n->n==9).findFirst().orElse(-1);
+
+        int i = Arrays.stream(numbers).filter(n->n==9)
+            .findFirst().orElse(0);
         System.out.println(i);
+
+
+//        int i = Arrays.stream(numbers).filter(n->n==9).findFirst().orElse(-1);
+//        System.out.println(i);
     }
 
     @Test
     public void findAny() throws Exception {
         int[] numbers = {1, 2, 3, 4, 5, 6, 7, 8, 9, 9, 10};
-        int i = Arrays.stream(numbers).filter(n -> n == 9).findAny().orElse(-1);
-        System.out.println(i);
+
+
+
+//        int i = Arrays.stream(numbers).filter(n -> n == 9).findAny().orElse(-1);
+//        System.out.println(i);
     }
 
     @Test
     public void allMatch() throws Exception {
         int[] even = {2, 4, 6, 8, 10};
-        boolean allMatch = Arrays.stream(even).allMatch(n -> n % 2 == 0);
-        System.out.println(allMatch);
+
+        boolean b = Arrays.stream(even).allMatch(n -> n % 2 == 0);
+        System.out.println(b);
+
+//        boolean allMatch = Arrays.stream(even).allMatch(n -> n % 2 == 0);
+//        System.out.println(allMatch);
 
     }
 
